# blockMyDough

./: .gitignore  README.md  main.py  pyproject.toml
app/src/: main.py
blockmydough/: constants.py  main.py
blockmydough/cli/: app.py  ui.py
blockmydough/cli/commands/: block.py  daemon.py  domain.py  passphrase.py  preset.py  schedule.py
blockmydough/core/: domains.py  presets.py  state.py
blockmydough/daemon/: service.py
env/: example.env
plans/: blockmydough-cli-architecture.md
scripts/: run_dev_cli.sh
